{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 11,
  "lineage": "7c8f05c9-0bc2-9457-f00a-1e5aa8d1e7ac",
  "resources": [
    {
      "module": "module.EBS",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d56f8956ab235b3",
            "arn": "arn:aws:ec2:us-east-1:728738226157:instance/i-071864323918aac92",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071864323918aac92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Aman-Pathak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ac7ed4c6ae747ea",
            "private_dns": "ip-10-0-1-221.ec2.internal",
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-54-160-161-158.compute-1.amazonaws.com",
            "public_ip": "54.160.161.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2a05db574b41792",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01b7d809236bea99b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070ba9086d17d4a37",
            "tags": {
              "Name": "EC2"
            },
            "tags_all": {
              "Name": "EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b7d809236bea99b"
            ]
          },
          "dependencies": [
            "module.EBS.aws_security_group.SG",
            "module.EBS.aws_subnet.Public-Subnet1",
            "module.EBS.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EBS",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:internet-gateway/igw-0893d3d1904172a61",
            "id": "igw-0893d3d1904172a61",
            "owner_id": "728738226157",
            "tags": {
              "Name": "IG"
            },
            "tags_all": {
              "Name": "IG"
            },
            "vpc_id": "vpc-0e59f50dc582ea539"
          },
          "dependencies": [
            "module.EBS.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EBS",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:route-table/rtb-023480d249163afac",
            "id": "rtb-023480d249163afac",
            "owner_id": "728738226157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0893d3d1904172a61",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e59f50dc582ea539"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EBS.aws_internet_gateway.IG",
            "module.EBS.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EBS",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e17ff9b221820eed",
            "route_table_id": "rtb-023480d249163afac",
            "subnet_id": "subnet-070ba9086d17d4a37"
          },
          "dependencies": [
            "module.EBS.aws_internet_gateway.IG",
            "module.EBS.aws_route_table.RT",
            "module.EBS.aws_subnet.Public-Subnet1",
            "module.EBS.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EBS",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:security-group/sg-01b7d809236bea99b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b7d809236bea99b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG",
            "name_prefix": "",
            "owner_id": "728738226157",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e59f50dc582ea539"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EBS.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EBS",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:subnet/subnet-070ba9086d17d4a37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070ba9086d17d4a37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet1"
            },
            "tags_all": {
              "Name": "Public-Subnet1"
            },
            "vpc_id": "vpc-0e59f50dc582ea539"
          },
          "dependencies": [
            "module.EBS.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EBS",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:vpc/vpc-0e59f50dc582ea539",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6be69e577598fb3",
            "default_route_table_id": "rtb-0b30161afb05bb642",
            "default_security_group_id": "sg-067a57604be7108cc",
            "dhcp_options_id": "dopt-08c8b7f86c0e6415b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e59f50dc582ea539",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b30161afb05bb642",
            "owner_id": "728738226157",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}